# FerrumQ

./: .gitignore  AGENTS.md  Cargo.toml  INSTRUCTION.md  Makefile  README.md  biome.json  deny.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.examples.json
.github/workflows/: ci.yml
crates/msg-broker/: Cargo.toml
crates/msg-broker/src/: broker.rs  commands.rs  delivery.rs  durable.rs  errors.rs  helpers.rs  idempotency.rs  lib.rs  memory.rs  state.rs
crates/msg-broker/tests/: durable.rs  in_memory.rs
crates/msg-control-api/: Cargo.toml
crates/msg-control-api/src/: lib.rs
crates/msg-control-api/tests/: control_api.rs
crates/msg-core/: Cargo.toml
crates/msg-core/src/: consumers.rs  delivery.rs  error.rs  identifiers.rs  lib.rs  message.rs  topics.rs  validation.rs
crates/msg-data-plane/: Cargo.toml
crates/msg-data-plane/src/: lib.rs
crates/msg-data-plane/tests/: data_plane.rs
crates/msg-observability/: Cargo.toml
crates/msg-observability/src/: lib.rs
crates/msg-postgres/: Cargo.toml
crates/msg-postgres/migrations/: 001_initial_schema.sql  002_full_text_search.sql
crates/msg-postgres/src/: config.rs  lib.rs  migrations.rs  models.rs  projection.rs  repository.rs
crates/msg-postgres/tests/: postgres_integration.rs  send_check.rs
crates/msg-protocol/: Cargo.toml  build.rs
crates/msg-protocol/proto/ferrumq/dataplane/v1/: dataplane.proto
crates/msg-protocol/src/: lib.rs
crates/msg-runtime/: Cargo.toml
crates/msg-runtime/src/: lib.rs
crates/msg-runtime/tests/: brokerd.rs
crates/msg-storage/: Cargo.toml
crates/msg-storage/src/: lib.rs
crates/msg-storage/tests/: partition_log.rs
crates/msg-test-harness/: Cargo.toml
crates/msg-test-harness/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  BROKER_STATE_FORMAT.md  CHAT.md  CLI.md  FAILURE_MODEL.md  LOCAL_DEMO.md  MILESTONES.md  OBSERVABILITY.md  POSTGRES.md  PROTOCOL.md  RELEASE_CHECKLIST.md  SDD.md  SDK.md  STORAGE_FORMAT.md  TESTING_STRATEGY.md  TUI.md
docs/ADR/: 0001-rust-core-typescript-cli.md  0001-rust-core-typescript-terminal.md  0002-modular-monolith-hexagonal.md  0003-append-only-log.md  0004-at-least-once-delivery.md  0005-control-plane-data-plane.md  0005-control-plane-vs-data-plane.md  0005-core-domain-newtypes-and-invariants.md  0006-core-domain-newtypes-and-invariants.md  0007-in-memory-broker-delivery-state.md  0008-append-only-log-storage.md  0009-durable-broker-delivery-state.md  0010-control-plane-http-api.md  0011-data-plane-grpc-api.md  0012-typescript-cli-foundation.md  0013-typescript-tui-foundation.md  0014-observability-foundation.md  0015-unified-runtime-single-process-broker.md  0016-chat-broadcast-emulation.md  0017-topic-scoped-durable-publish-idempotency.md  0018-postgresql-metadata-store.md  0019-postgresql-full-text-search.md  0020-search-http-cli-tui-exposure.md
examples/: basic-flow.ts  nack-dlq-flow.ts  status-metrics.ts
scripts/: ensure-brokerd.mjs
