[package]
name = "msg-broker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
msg-core = { path = "../msg-core" }
msg-observability = { path = "../msg-observability" }
msg-storage = { path = "../msg-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
