[package]
name = "msg-control-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["postgres"]
postgres = ["dep:msg-postgres"]

[dependencies]
axum = { version = "0.8", features = ["json"] }
msg-broker = { path = "../msg-broker" }
msg-core = { path = "../msg-core" }
msg-observability = { path = "../msg-observability" }
msg-postgres = { path = "../msg-postgres", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
