[package]
name = "msg-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
msg-broker = { path = "../msg-broker" }
msg-core = { path = "../msg-core" }
msg-storage = { path = "../msg-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["derive", "runtime-tokio", "postgres", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
tracing.workspace = true
url = "2"

[dev-dependencies]
tempfile = "3"
