[package]
name = "msg-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
clap.workspace = true
msg-control-api = { path = "../msg-control-api" }
msg-data-plane = { path = "../msg-data-plane" }
msg-observability = { path = "../msg-observability" }
msg-postgres = { path = "../msg-postgres", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true, features = ["transport"] }
tracing.workspace = true

[features]
default = ["postgres"]
postgres = ["msg-postgres"]

[dev-dependencies]
msg-protocol = { path = "../msg-protocol" }
serde_json = "1"
tempfile = "3"
tracing-subscriber.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "brokerd"
path = "src/bin/brokerd.rs"
